--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "AAkrit Subedi",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^4.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mysql": "^2.18.1"
