--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "AAkrit Subedi",
   "license": "ISC",
   "dependencies": {
+    "@hapi/boom": "^9.0.0",
     "bcrypt": "^4.0.0",
     "bookshelf": "^1.1.0",
     "dotenv": "^8.2.0",
